--- a/.gitignore
+++ b/.gitignore
@@ -8,7 +8,7 @@ pnpm-debug.log*
 lerna-debug.log*
 
 node_modules
-dist
+# dist
 dist-ssr
 *.local
 
@@ -23,8 +23,8 @@ dist-ssr
 *.sln
 *.sw?
 
-netlify
 .env
 lambda/
+
 # Local Netlify folder
 .netlify
