--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "axios": "^1.4.0",
+    "dayjs": "^1.11.10",
     "netlify-cli": "^15.9.1",
     "node-fetch": "^3.3.1",
     "qs": "^6.11.2",
