--- a/package.json
+++ b/package.json
@@ -10,11 +10,11 @@
   },
   "dependencies": {
     "axios": "^1.4.0",
-    "dayjs": "^1.11.10",
     "netlify-cli": "^15.9.1",
     "node-fetch": "^3.3.1",
     "qs": "^6.11.2",
     "react": "^18.2.0",
+    "react-content-loader": "^6.2.1",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.10.0"
   },
